--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<header class="d-flex flex-row align-items-center justify-content-between pb-3 px-4 mb-3 bg-withe border-bottom fixed-top shadow-sm">
+<header class="d-flex flex-row align-items-center justify-content-between pb-3 px-4 mb-3 bg-white border-bottom fixed-top shadow-sm">
     <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">
     <nav class="my-2 text-uppercase fs-4">
       <a class="p-2 text-dark text-decoration-none" href="#">Home</a>
